--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -190,6 +190,11 @@ body.light-theme{
 .light-theme::-webkit-scrollbar-thumb:hover{
   background-color: hsl(var(--second-hue),8% , 44%);
 }
+.light-theme .contact__form-input{
+  /* background-color: none; */
+  color: var(--text-color);
+  border:2px solid var(--text-color-dark) ;
+}
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 968px;
@@ -461,6 +466,11 @@ color: #fff;
 .about__description{
   margin-bottom: 2rem;
 }
+.embed-responsive{
+  display: flex;
+  justify-content: center;
+  
+}
 /*=============== SKILLS ===============*/
 
 .skills__container{
@@ -582,7 +592,7 @@ border-radius: 1.25rem;
   color: var(--body-color);
 }
 
-/*=============== TESTIMONIAL ===============*/
+/*=============== project ===============*/
 .project__card{
   background-color: var(--container-color);
   padding: 1.2rem 1.5rem;
@@ -715,6 +725,9 @@ border-radius: 1.25rem;
 .contact__form-area textarea{
   resize: none;
 
+}
+.container-form{
+  margin: 0;
 }
 /*=============== FOOTER ===============*/
 
